[gd_scene load_steps=8 format=3 uid="uid://lfnd5jmbp4xe"]

[ext_resource type="Script" path="res://chores.gd" id="1_ynnwy"]
[ext_resource type="Texture2D" uid="uid://xgcwavswjihc" path="res://assets/gray_bg.png" id="2_r4a53"]
[ext_resource type="Texture2D" uid="uid://cf7enixisf8a5" path="res://background 2.jpg" id="2_rklqr"]
[ext_resource type="Script" path="res://cleaning.gd" id="4_b3y2f"]
[ext_resource type="Texture2D" uid="uid://c8iy7wjoo8iku" path="res://squeegee.png" id="4_gjmlf"]
[ext_resource type="Texture2D" uid="uid://ib4enq4pss8y" path="res://assets/suds.png" id="5_7jhv3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dkqu"]
size = Vector2(180, 106.667)

[node name="chores" type="Node2D"]
script = ExtResource("1_ynnwy")

[node name="GrayBg" type="Sprite2D" parent="."]
position = Vector2(287.841, 324.841)
scale = Vector2(0.574318, 0.648318)
texture = ExtResource("2_r4a53")

[node name="Icon" type="Sprite2D" parent="GrayBg"]
position = Vector2(-334.903, -350.663)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon2" type="Sprite2D" parent="GrayBg"]
position = Vector2(-4.94632, -348.349)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon2"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon2/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon3" type="Sprite2D" parent="GrayBg"]
position = Vector2(324.139, -351.433)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon3"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon3/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon4" type="Sprite2D" parent="GrayBg"]
position = Vector2(-331.42, -36.7736)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon4"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon4/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon5" type="Sprite2D" parent="GrayBg"]
position = Vector2(-1.46423, -34.4597)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon5"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon5/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon6" type="Sprite2D" parent="GrayBg"]
position = Vector2(327.622, -37.5446)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon6"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon6/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon7" type="Sprite2D" parent="GrayBg"]
position = Vector2(-331.42, 293.311)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon7"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon7/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon8" type="Sprite2D" parent="GrayBg"]
position = Vector2(-1.46423, 295.625)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon8"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon8/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Icon9" type="Sprite2D" parent="GrayBg"]
position = Vector2(327.622, 292.541)
scale = Vector2(2.46216, 2.18112)
texture = ExtResource("5_7jhv3")
script = ExtResource("4_b3y2f")

[node name="Area2D" type="Area2D" parent="GrayBg/Icon9"]
scale = Vector2(0.711111, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrayBg/Icon9/Area2D"]
shape = SubResource("RectangleShape2D_4dkqu")

[node name="Background2" type="Sprite2D" parent="."]
visible = false
position = Vector2(288, 324)
scale = Vector2(0.533333, 0.9)
texture = ExtResource("2_rklqr")

[node name="Squeegee" type="Sprite2D" parent="."]
position = Vector2(496, 282)
scale = Vector2(0.302734, 0.302734)
texture = ExtResource("4_gjmlf")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 30.0
offset_top = 156.0
offset_right = 319.0
offset_bottom = 219.0
theme_override_font_sizes/font_size = 40
text = "CLEAN!!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="GrayBg/Icon/Area2D" to="GrayBg/Icon" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon2/Area2D" to="GrayBg/Icon2" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon3/Area2D" to="GrayBg/Icon3" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon4/Area2D" to="GrayBg/Icon4" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon5/Area2D" to="GrayBg/Icon5" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon6/Area2D" to="GrayBg/Icon6" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon7/Area2D" to="GrayBg/Icon7" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon8/Area2D" to="GrayBg/Icon8" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="GrayBg/Icon9/Area2D" to="GrayBg/Icon9" method="_on_area_2d_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
